--- a/style.css
+++ b/style.css
@@ -16,3 +16,9 @@ img{
   align-items: center;
   display: none;
 }
+
+@media screen and (max-width: 768px) and (min-width: 480px) {
+  img{
+    margin: auto;
+  }
+}
