--- a/style.css
+++ b/style.css
@@ -9,16 +9,14 @@ body{
   font-family: Arial, sans-serif;
 }
 img{
-  margin-left:40% ;
+  display: flex;
+  justify-self: center;
   width: 300px;
   height: 300px;
   margin-top: 20px;
   align-items: center;
   display: none;
 }
-
-@media screen and (max-width: 768px) and (min-width: 480px) {
-  img{
-    margin: auto;
-  }
+a{
+  display: none;
 }
